fixed spacing on list, made color POP

--- a/style.css
+++ b/style.css
@@ -1,23 +1,42 @@
 body {
-    background-color:bisque;
+    
+    text-align: center;
+    background-color:rgb(4, 245, 4);
 }
 
 header {
     text-align: center;
-}
+    }
+    li {
+        display: inline;
+        padding: 10px 5px;
+        margin: 0px 20px;
+        background-color: cyan;
+    }
 
+    p {
+        background-color: rgb(241, 167, 6);
+    }
+    
 h1 {
     border:black 1px solid;
     background-color:red;
     text-align:center;
 }
 
-li {
-    border:black 1px solid;
+section {
     display: inline;
     padding: 10px 5px;
     margin: 0px 20px;
-    background-color: black;
-    color: yellow;
+    color: rgb(111, 0, 255);
 }
 
+img {
+     
+    width: 90%
+}
+
+.section_image
+footer { 
+    text-align: center;
+}
